...

    <TextView
        android:id="@+id/tvBsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subscription_bs_title"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBsPremiumIcon" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBsMessage"
        tools:text="1,00 €/Monat • Jederzeit kündbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBsSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color_premium_range"
        android:padding="16dp"
        android:text="@string/subscribe_button"
...
